--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script src="https://cdn.datatables.net/2.0.5/js/dataTables.min.js"></script>
+        <link href="https://cdn.datatables.net/2.0.5/css/dataTables.dataTables.min.css" rel="stylesheet">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="styles/style.css"> 
+        <title>{% block title %}Zdieľanie platby{% endblock %}</title>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -14,6 +21,64 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <nav class="navbar navbar-expand-sm navbar-light bg-light mb-4">
+            <div class="container">
+                <a class="navbar-brand" href="/" style="cursor:default" rel="nofollow">
+                    <img src="{{ asset('images/test.png') }}" alt="Logo" height="30" class="d-inline-block align-top">QR Code
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">IBAN</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item">Prehľad IBAN účtov</a>
+                            {% if app.user %}
+                            <a class="dropdown-item">Pridať IBAN</a>
+                            {% endif %}
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Platby</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item">Zdieľanie platby</a>
+                                {% if app.user %}
+                                <a class="dropdown-item">Uložené platby</a>
+                                {% endif %}
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/about">O apke</a>
+                        </li>
+                        {% if app.user %}
+                        <li class="nav-item" style="background-color: #cccccc; border-radius: 5px;">
+                            <a class="nav-link" href="#" style="font-weight: bold; color: #000;">Vitajte, {{ app.user.nickname }}</a>
+                        </li>
+                        <li class="nav-item">
+                            <form action="{{ path('logout') }}" method="POST">
+                                <button type="submit" class="btn btn-danger d-flex align-items-center justify-content-center" style="height: 40px;">
+                                <span style="line-height: 10px;">Odhlásiť</span>
+                                </button>
+                            </form>
+                        </li>
+                        {% else %}
+                        <li class="nav-item" style="background-color: #cccccc; border-radius: 5px;">
+                            <a class="nav-link" href="/login" style="font-weight: bold; color: #000;">Registrácia | Prihlásenie</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+            <main>
+                {% block body %}{% endblock %}
+            </main>
+
+            <footer class="footer mt-5 my-1 py-1 bg-light-black text-white text-center">Copyright &copy; 2024</footer>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
